Refactoring Utility classes